--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
+    "@nestjs/mongoose": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/platform-socket.io": "^11.0.10",
+    "@nestjs/swagger": "^11.0.6",
     "@nestjs/websockets": "^11.0.10",
     "bcryptjs": "^3.0.2",
-    "mongoose": "^8.10.1",
+    "mongoose": "^8.12.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
