--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/swagger": "^11.0.6",
     "@nestjs/websockets": "^11.0.10",
     "bcryptjs": "^3.0.2",
+    "class-validator": "^0.14.1",
     "mongoose": "^8.12.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
